syntax = "proto3";

option go_package = "github.com/ebpflabs/hyperion/v1alpha1/base";

package hyperion.v1alpha1.base;

import "google/protobuf/any.proto";

message Module {
	ModuleCore core = 1;
	ModuleMetadata metadata = 2;
	string uid = 3;
	ModuleSpec spec = 4;
	ModuleStatus status = 5;
}

message ModuleCore {
	string name = 1;
}

message ModuleMetadata {
	message moduleRelease {
		string location = 1;
		string sha256 = 2;
	}

	map<string, string> labels = 1;
	oneof release {
		moduleRelease linuxAMD64 = 2;
		moduleRelease linuxARM64 = 3;
	}
}

message ModuleSpec {
	google.protobuf.Any data = 1;

	oneof dataSource {
		LabelSelector label = 2;
		ModuleCore core = 3;
	}
}

message ModuleStatus {
	string msg = 1;	
}

message LabelSelector {
	map<string, string> selector = 1;
}